# data-vault

./: .gitignore  Makefile  README.md
dv/: .env  Cargo.toml
dv/migrations/: 2025_06_24_users_create.sql
dv/src/: lib.rs  main.rs
dv/src/domain/users/: users.rs
dv/src/libraries/: mod.rs
dv/src/libraries/db/: sqlite.rs
dv/src/libraries/server/: config.rs  server.rs
dv/src/libraries/utils/: utils.rs
dv/src/web/handlers/: index.rs  login.rs  mod.rs  signup.rs
dv/static/css/: styles.css
dv/templates/: index.html  login.html  signup.html
go-dv/: README.md  go.mod
go-dv/cmd/: main.go
go-dv/internal/users/: i_repository.go  service.go  user_dto.go  user_interface.go  user_service.go
go-dv/mvc/controllers/: dashboard.go  index.go  static.go
go-dv/mvc/models/: user.go  user_gorm.go  user_inmemory.go
go-dv/mvc/views/: index.html
go-dv/pkg/auth/: auth.go  cookie.go  jwt.go  login.go  logout.go  middleware.go  models.go  refresh.go  register.go  token.go
go-dv/pkg/config/: config.go  models.go
go-dv/pkg/errors/: write.go
go-dv/pkg/htemplate/: template.go
go-dv/pkg/server/: port.go  router.go  server.go
go-dv/www/: readme.txt
go-dv/www/static/css/: styles.css
go-dv/www/static/js/: app.js  script.js
go-dv/www/static/js/components/: dialog.js  index.js
go-dv/www/static/js/lib/: index.js  router.js
go-dv/www/static/js/pages/: index.js
go-dv/www/static/js/pages/auth/: login.js  logout.js  register.js
go-dv/www/static/js/pages/dashboard/: dashboard.js
go-dv/www/static/js/pages/docs/: requirements.js
(+2 files in other folders)
