[package]
name = "dv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
dotenvy = "0.15"
tower = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
serde_json = "1"
cookie = "0.18"
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed"] }
